--- a/webapp2/index.html
+++ b/webapp2/index.html
@@ -159,6 +159,9 @@
 <script src="app/component/idea/partial/idea/idea.js"></script>
 <script src="app/component/user-profile/partial/img-crop-modal/img-crop-modal.js"></script>
 
+<script src="app/common/web_component/focus-me/FocusMe.js"></script>
+<script src="app/common/web_component/focus-me/directive/FocusMe.js"></script>
+
 <!-- Add New Component JS Above -->
 
 
