--- a/webapp2/app/common/web_component/sidebar/directive/sidebar/sidebar.html
+++ b/webapp2/app/common/web_component/sidebar/directive/sidebar/sidebar.html
@@ -1,11 +1,22 @@
 <div class="sidebar-wrapper full-absolute">
 
-	<div ng-click="doCreateIdea()" >
-		<span>
-			<i class="fa fa-plus"></i>
-		</span>
-		<span>Create Idea</span>
+	
+
+	<div class="container-fluid">
+
+		<div class="row">
+			<div class="col-xs-12">
+				<div ng-click="doCreateIdea()" >
+					<span>
+						<i class="fa fa-plus"></i>
+					</span>
+					<span>Create Idea</span>
+				</div>
+
+			</div>
+		</div>
 	</div>
+
 	
 	<div class="sidebar-idea-wrapper">
 		<div class="container-fluid">
